RESOLVED FIXED119664
Cleanup MediaQueryListListener
https://bugs.webkit.org/show_bug.cgi?id=119664
Summary Cleanup MediaQueryListListener
Sam Weinig
Reported 2013-08-11 12:25:10 PDT
Cleanup MediaQueryListListener
Attachments
Patch (29.39 KB, patch)
2013-08-11 12:38 PDT, Sam Weinig
kling: review+
Sam Weinig
Comment 1 2013-08-11 12:38:51 PDT
Andreas Kling
Comment 2 2013-08-11 12:49:38 PDT
Comment on attachment 208503 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=208503&action=review > Source/WebCore/ChangeLog:8 > + Make MediaQueryListListener a proper WebIDL callback. Nice. Guess you might need to rebaseline the bindings tests.
Sam Weinig
Comment 3 2013-08-11 13:10:11 PDT
WebKit Commit Bot
Comment 4 2013-08-13 13:50:14 PDT
Re-opened since this is blocked by bug 119768
Sam Weinig
Comment 5 2013-08-13 18:20:39 PDT
Re-landed in r154035 with updated test and results.
Simon Fraser (smfr)
Comment 6 2013-08-14 12:42:49 PDT
Sam Weinig
Comment 7 2013-08-14 17:52:02 PDT
(In reply to comment #6) > Bindings generation tests are still failing: > http://build.webkit.org/builders/Apple%20MountainLion%20Debug%20WK2%20%28Tests%29?numbuilds=100 Fixed in r154087.
Sam Weinig
Comment 9 2013-08-15 10:42:45 PDT
(In reply to comment #8) > (In reply to comment #7) > > (In reply to comment #6) > > > Bindings generation tests are still failing: > > > http://build.webkit.org/builders/Apple%20MountainLion%20Debug%20WK2%20%28Tests%29?numbuilds=100 > > > > Fixed in r154087. > > Hi: the binding generation tests are still failing in GTK. Before r154087 this was the error: http://build.webkit.org/builders/GTK%20Linux%2064-bit%20Release/builds/39835/steps/bindings-generation-tests/logs/stdio, after r154087, the error is now: http://build.webkit.org/builders/GTK%20Linux%2064-bit%20Release/builds/39836/steps/bindings-generation-tests/logs/stdio That looks like an unrelated change.
Note You need to log in before you can comment on or make changes to this bug.