Source/WebCore/DerivedSources.cpp
@@ -274,6 +274,7 @@
 #include "JSMediaError.cpp"
 #include "JSMediaList.cpp"
 #include "JSMediaQueryList.cpp"
+#include "JSMediaQueryListListener.cpp"
 #if ENABLE(MEDIA_SOURCE)
 #include "JSMediaSource.cpp"
 #endif
