Source/WebCore/css/MediaQueryListListener.h
@@ -20,35 +20,34 @@
 #ifndef MediaQueryListListener_h
 #define MediaQueryListListener_h
 
-#include "ScriptState.h"
-#include "ScriptValue.h"
 #include <wtf/RefCounted.h>
-#include <wtf/text/WTFString.h>
 
 namespace WebCore {
 
 class MediaQueryList;
 
-// See http://dev.w3.org/csswg/cssom-view/#the-mediaquerylist-interface
-
 class MediaQueryListListener : public RefCounted<MediaQueryListListener> {
 public:
-    static PassRefPtr<MediaQueryListListener> create(const ScriptValue& value)
-    {
-        if (!value.isFunction())
-            return 0;
-        return adoptRef(new MediaQueryListListener(value));
-    }
-    void queryChanged(ScriptState*, MediaQueryList*);
+    enum Type {
+        JSMediaQueryListListenerType
+    };
 
-    bool operator==(const MediaQueryListListener& other) const { return m_value == other.m_value; }
+    virtual bool queryChanged(MediaQueryList*) = 0;
+    virtual bool operator==(const MediaQueryListListener&) const = 0;
+    virtual ~MediaQueryListListener() { }
+
+    Type type() const { return m_type; }
+
+protected:
+    explicit MediaQueryListListener(Type type)
+        : m_type(type)
+    {
+    }
 
 private:
-    MediaQueryListListener(const ScriptValue& value) : m_value(value) { }
-
-    ScriptValue m_value;
+    Type m_type;
 };
 
-}
+} // namespace WebCore
 
 #endif // MediaQueryListListener_h
