Source/WebCore/css/MediaQueryMatcher.h
@@ -20,7 +20,6 @@
 #ifndef MediaQueryMatcher_h
 #define MediaQueryMatcher_h
 
-#include "ScriptState.h"
 #include <wtf/Forward.h>
 #include <wtf/RefCounted.h>
 #include <wtf/Vector.h>
@@ -59,7 +58,7 @@ private:
         Listener(PassRefPtr<MediaQueryListListener>, PassRefPtr<MediaQueryList>);
         ~Listener();
 
-        void evaluate(ScriptState*, MediaQueryEvaluator*);
+        void evaluate(MediaQueryEvaluator*);
 
         MediaQueryListListener* listener() { return m_listener.get(); }
         MediaQueryList* query() { return m_query.get(); }
@@ -82,6 +81,6 @@ private:
     unsigned m_evaluationRound;
 };
 
-}
+} // namespace WebCore
 
 #endif // MediaQueryMatcher_h
